# DScaler

./: CMakeLists.txt  ReadMe.Express.txt  ReadMe.Express2008.txt  ReadMe.NET.txt  ReadMe.VS2005.txt  ReadMe.VS2008.txt  ReadMe.VS6.txt  ReadMe.txt  cvs2cl.pl
Api/: DSDrv.H  DS_ApiCommon.h  DS_Control.h  DS_Deinterlace.h  DS_Filter.h  DScalerVersion.h  dTV_ApiCommon.h  dTV_Control.h  dTV_Deinterlace.h  dTV_Filter.h
Api/APITest/: DScalerAPITest.vbp  frmDScalerAPITest.frm  frmDScalerAPITest.frx
DSRend/: AutoLockCriticalSection.cpp  AutoLockCriticalSection.h  ColorConverter.cpp  ColorConverter.h  Cpu.cpp  Cpu.h  CustomComObj.h  DSRend.cpp  DSRend.def  DSRend.dsp  DSRend.dsw  DSRend.idl  DSRend.rc  DSRend2005.sln  DSRend2005.vcproj  DSRend2008.sln  DSRend2008.vcproj  DSRendAboutPage.cpp  DSRendAboutPage.h  DSRendAboutPage.rgs  DSRendFilter.cpp  DSRendFilter.h  DSRendFilter.rgs  DSRendInPin.cpp  DSRendInPin.h  DSRendInPin.rgs  DSRendQualityPage.cpp  DSRendQualityPage.h  DSRendQualityPage.rgs  DSRendps.def  DSRendps.mk  Event.cpp  Event.h  FieldBufferHandler.cpp  FieldBufferHandler.h  PersistStream.cpp  PersistStream.h  SettingsPage.cpp  SettingsPage.h  SettingsPage.rgs  (+9 more)
DSRend/srcdox/: dsrend.txt
DScaler/: AD9882.cpp  AD9882.h  AspectDetect.cpp  AspectFilters.cpp  AspectFilters.h  AspectFilters.hpp  AspectGUI.cpp  AspectRatio.cpp  AspectRatio.h  AspectRect.h  Audio.cpp  Audio.h  AudioControls.cpp  AudioControls.h  AudioDecoder.cpp  AudioDecoder.h  AutoCriticalSection.cpp  AutoCriticalSection.h  BT848Card.cpp  BT848Card.h  BT848Card_Atlas.cpp  BT848Card_Audio.cpp  BT848Card_PMS.cpp  BT848Card_Tuner.cpp  BT848Card_Types.cpp  BT848Provider.cpp  BT848Provider.h  BT848Souce_UI.cpp  BT848Source.cpp  BT848Source.h  BT848Source_Audio.cpp  BT848Source_UI.cpp  BT848_VoodooTV_IFdem.cpp  BT848_VoodooTV_IFdem.h  BitVector.cpp  BitVector.h  Bitmap.cpp  Bitmap.h  BitmapAsButton.cpp  BitmapAsButton.h  (+425 more)
DScaler/RES/: DScaler.exe.manifest  DScaler.fnt  DScaler.rc2  DScaler2.fnt  DScalerFrench.fnt  DScalerFrench2.fnt
DScaler/dshowsource/: BaseCrossbar.cpp  BaseCrossbar.h  CaptureDevice.cpp  CaptureDevice.h  DSAudioDevicePage.cpp  DSAudioDevicePage.h  DSFileSource.cpp  DSFileSource.h  DSGraph.cpp  DSGraph.h  DSObject.cpp  DSObject.h  DSProvider.cpp  DSProvider.h  DSSource.cpp  DSSource.h  DSSourceBase.cpp  DSSourceBase.h  DSTVTuner.cpp  DSTVTuner.h  DSVideoFormatPage.cpp  DSVideoFormatPage.h  DShowAudioControls.cpp  DShowAudioControls.h  DShowBaseSource.cpp  DShowBaseSource.h  DShowDirectTuner.cpp  DShowDirectTuner.h  DShowFileSource.cpp  DShowFileSource.h  DShowGenericAudioControls.cpp  DShowGenericAudioControls.h  DShowSeeking.cpp  DShowSeeking.h  DShowTVAudio.cpp  DShowTVAudio.h  DevEnum.cpp  DevEnum.h  PinEnum.cpp  PinEnum.h  (+7 more)
DScalerRes/: DScalerRes.dsp  DScalerRes.rc  DScalerRes.vcproj  DScalerRes2005.vcproj  DScalerRes2008.vcproj  Resource.h  VersionRes.rc  hand_point.cur
DScalerResDbg/BT8x8Res/: BT8x8Res.dsp  BT8x8Res.dsw  BT8x8Res.rc  resource.h
DScalerResDbg/CX2388xRes/: CX2388xRes.dsp  CX2388xRes.dsw  CX2388xRes.rc  resource.h
DScalerResDbg/SAA7134Res/: SAA7134Res.dsp  SAA7134Res.rc  resource.h
Debug/: channel.txt
DesignDoc/: SettingRepository.vsd
Disasm/: Disasm.dsp  Disasm.vcproj  Disasm2005.vcproj  disasm.cpp  ia32.txt
Driver/DSDrv/: DEBUGOUT.CPP  DEBUGOUT.H  DSDrv.cpp  DSDrv.def  DSDrv.rc  DSdrv.dsp  KernelDriver.H  KernelDriver.cpp  OBJWIN32.H  RESOURCE.H
Driver/DSDrv95/: Basetype.h  CRTL.CPP  DEBUGOUT.CPP  DEBUGOUT.H  DSDrv95.cpp  DSDrv95.def  DSDrv95.dsp  DSDrv95.rc  Ioclass.cpp  Ioclass.h  PCIENUM.CPP  VXDSTUB.ASM  makefile  resource.h
Driver/DSDrvNT/: Basetype.h  DEBUGOUT.CPP  DEBUGOUT.H  DRVALLOC.CPP  DSDrvNT.cpp  DSDrvNT.dsp  DSDrvNT.h  DSDrvNT.rc  DSDrvNT.vcproj  Ioclass.cpp  Ioclass.h  PCIENUM.CPP  RESOURCE.H  precomp.h  sources
FreqExtract/: FreqExtract.dsp  FreqExtract.vcproj  FreqExtract2005.vcproj  FreqExtract2008.vcproj  StdAfx.cpp  StdAfx.h  main.cpp
Help/: 22Pulldown.HTM  22Pulldown.htm  32Pulldown.HTM  32Pulldown.htm  32spec.htm  Adaptive.HTM  Adaptive.htm  AdaptiveNoise.htm  Advanced.htm  Aspect.HTM  Aspect.htm  AspectRatio.htm  Authors.htm  BT848Advanced.htm  BlackWhite.htm  BlendedClip.HTM  BlendedClip.htm  Bob.htm  CC.htm  COPYING.html  CVS_Instructions.htm  CX2388xAdvanced.htm  Calibration.htm  ColourInversion.htm  D3D9.htm  DScaler.hhp  DScaler_Readme.htm  Deinterlace.htm  Developer.HTM  Developer.htm  EPG.html  EvenOnly.HTM  EvenOnly.htm  FAQ.htm  Fast Memory Access.htm  Features.HTM  Features.htm  FilmDetect.htm  Filters.htm  Gamma.HTM  (+65 more)
HelpDev/: DScalerDev.bat  Dscaler.cfg
Install/: AVSHTPC.url  DScaler.sln  DScaler.url  DScaler.wip  HowToRelease.txt  MakeSfBuild.bat  MakeSfBuild2.bat  MakeSfBuild2008.bat  README.txt  RegSpy.iss  Warning.rtf  dscaler.iss
Mapconv/: Mapconv.dsp  Mapconv.vcproj  Mapconv2005.vcproj  mapconv.cpp
PlugTest/: PlugTest.cpp  PlugTest.dsp  PlugTest.vcproj  PlugTest2005.vcproj  PlugTest2008.vcproj  ReadMe.txt  StdAfx.cpp  StdAfx.h
Plugins/DI_Adaptive/: DI_Adaptive.c  DI_Adaptive.dsp  DI_Adaptive.vcproj  DI_Adaptive2005.vcproj  DI_Adaptive2008.vcproj
Plugins/DI_BlendedClip/: DI_BlendedClip.RC  DI_BlendedClip.c  (+5 more)
Reflasher/: HardwareDriver.cpp  HardwareDriver.h  My2388xCard.cpp  My2388xCard.h  Page1.cpp  Page1.h  Page2.cpp  Page2.h  Page3.cpp  Page3.h  Page4.cpp  Page4.h  Reflasher.cpp  Reflasher.dsp  Reflasher.dsw  Reflasher.h  Reflasher.rc  ReflasherDlg.cpp  StdAfx.cpp  StdAfx.h  Wizard.cpp  Wizard.h  resource.h
RegLog/: GenericCard.cpp  GenericCard.h  RegLog.cpp  RegLog.dsp  RegLog.h  RegLog.rc  StdAfx.cpp  StdAfx.h  resource.h
RegSpy/: RegSpy.cpp  RegSpy.dsp  RegSpy.h  RegSpy.rc  RegSpy.vcproj  RegSpy2005.vcproj  RegSpy2008.vcproj  StdAfx.cpp  StdAfx.h  resource.h
Release/: CX2388xCards.ini  DSDrv4.sys  DSDrv4.vxd  DSDrv4AMD64.sys  DSDrv4IA64.sys  DSDrv4nt4.sys  DScaler.d3u  SAA713xCards.ini  channel.txt  dscaler.chm  dscaler_intro.tif
SendMsg/: SendMsg.cpp  SendMsg.dsp  SendMsg.vcproj  SendMsg2005.vcproj  SendMsg2008.vcproj
Verinc/: Verinc.dsp  Verinc.vcproj  Verinc2005.vcproj  verinc.c
(+353 files in other folders)
